--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,11 @@
     <main>
       <%= render "layouts/header" %>
       <div class="container-fluid">
+        <% flash.each do |message_type, message| %>
+          <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <% end %>
         <%= yield %>
-      <div>
+      </div>
       <%= render "layouts/footer" %>
     </main>
   </body>
