--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -16,8 +16,10 @@
     <button type="button" class="btn btn-success btn-sm">
       <i class="bi-pencil-square"></i>
     </button>
-    <button type="button" class="btn btn-danger btn-sm">
-      <i class="bi-trash-fill"></i>
-    </button>
+    <%= link_to project, data: { "turbo-method": :delete, turbo_confirm: t("projects.you_sure?") }  do %>
+      <button type="button" class="btn btn-danger btn-sm">
+        <i class="bi-trash-fill text-light"></i>
+      </button>
+    <% end %>
   </td>
 </tr>
