--- a/app/views/projects/_project_detail.html.erb
+++ b/app/views/projects/_project_detail.html.erb
@@ -18,7 +18,7 @@
                 </tr>
                 <tr>
                   <td><%= t ".project_status" %></td>
-                  <td><%= @project.status %></td>
+                  <td><%= t "projects.project.#{@project.status}" %></td>
                 </tr>
                 <tr>
                   <td><%= t ".project_group" %></td>
