task_67461 add memeber

--- a/app/assets/stylesheets/project.scss
+++ b/app/assets/stylesheets/project.scss
@@ -1,4 +1,4 @@
-.text-bg-news {
+.text-bg-new {
   background-color: green;
   color: white;
 }
@@ -9,8 +9,8 @@
 }
 
 .text-bg-maintaining {
-  background-color: blue;
   color: white;
+  background-color: blue;
 }
 
 .text-bg-pending {
