--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
         <% flash.each do |message_type, message| %>
           <div class="alert alert-<%= message_type %>"><%= message %></div>
         <% end %>
+        <%= turbo_frame_tag "modal" %>
         <%= yield %>
       </div>
       <%= render "layouts/footer" %>
