--- a/app/views/projects/_project_member.html.erb
+++ b/app/views/projects/_project_member.html.erb
@@ -4,9 +4,9 @@
     <div class="row">
       <div class="col-sm-8"><h2><%= t ".Project_Member" %></h2></div>
       <div class="col-sm-4">
-        <button type="button" class="btn btn-info add-new">
+        <%= link_to new_project_user_path, data: {turbo_frame: "modal"}, class: "btn btn-primary btn-sm" do %>
           <i class="fa fa-plus"></i> <%= t ".Add_New" %>
-        </button>
+        <% end %>
       </div>
     </div>
   </div>
