--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -11,8 +11,10 @@
     <button type="button" class="btn btn-success btn-sm">
       <i class="bi-pencil-square"></i>
     </button>
-    <button type="button" class="btn btn-danger btn-sm">
-      <i class="bi-trash-fill"></i>
-    </button>
+    <%= link_to report, data: { "turbo-method": :delete, turbo_confirm: t("reports.you_sure?") }  do %>
+      <button type="button" class="btn btn-danger btn-sm">
+        <i class="bi-trash-fill text-light"></i>
+      </button>
+    <% end %>
   </td>
 </tr>
