--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -13,13 +13,15 @@
     <%= link_to project_path(project), class: "btn btn-primary btn-sm" do %>
       <i class="bi-eye-fill"></i>
     <% end %>
-    <button type="button" class="btn btn-success btn-sm">
-      <i class="bi-pencil-square"></i>
-    </button>
-    <%= link_to project, data: { "turbo-method": :delete, turbo_confirm: t("projects.you_sure?") }  do %>
-      <button type="button" class="btn btn-danger btn-sm">
-        <i class="bi-trash-fill text-light"></i>
-      </button>
+    <% if can_edit project %>
+      <%= link_to edit_project_path(project), class: "btn btn-success btn-sm" do %>
+        <i class="bi-pencil-square"></i>
+      <% end %>
+      <%= link_to project, data: { "turbo-method": :delete, turbo_confirm: t("projects.you_sure?") }  do %>
+        <button type="button" class="btn btn-danger btn-sm">
+          <i class="bi-trash-fill text-light"></i>
+        </button>
+      <% end %>
     <% end %>
   </td>
 </tr>
