--- a/app/views/projects/_projects_form.html.erb
+++ b/app/views/projects/_projects_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_with model: @project, url: projects_path do |f| %>
+<%= form_with model: @project do |f| %>
+  <%= f.hidden_field :creator_id, value: @current_user.id %>
   <div class="mb-3">
     <%= f.label :name, t("project.form.name"), class: "form-label" %>
     <%= f.text_field :name, class: "form-control #{invalid(@project, :name)}" %>
