--- a/app/views/projects/_projects_form.html.erb
+++ b/app/views/projects/_projects_form.html.erb
@@ -27,7 +27,7 @@
   </div>
   <div class="mb-3">
     <%= f.label :group_id, t("project.form.group"), class: "form-label" %>
-    <%= f.number_field :group_id, class: "form-control #{invalid(@project, :group_id)}", only_integer: true %>
+    <%= f.select :group_id, group_select, {}, class: "form-select #{invalid(@project, :group_id)}" %>
     <p class="error"><%= show_errors(@project, :group_id) %></p>
   </div>
   <div class="mb-3">
@@ -51,9 +51,9 @@
     <p class="error"><%= show_errors(@project, :project_folder) %></p>
   </div>
   <div class="mb-3">
-    <%= f.label :customer_info, t("project.form.customer_info"), class: "form-label" %>
-    <%= f.text_field :customer_info, class: "form-control #{invalid(@project, :customer_info)}" %>
-    <p class="error"><%= show_errors(@project, :customer_info) %></p>
+    <%= f.label :customers, t("project.form.customer_info"), class: "form-label" %>
+    <%= f.select :customers, customer_info_select, {:prompt => t("project.form.select_customer_info")}, class: "form-select #{invalid(@project, :customers)}" %>
+    <p class="error"><%= show_errors(@project, :customers) %></p>
   </div>
   <div class="mb-3">
     <h6><%= t("project.form.project_detail") %></h6>
