--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,4 +1,5 @@
 <%= render "search_form" %>
+<%= link_to t(".new_project"), new_project_path, class: "btn btn-primary mb-2" %>
 <div class="table-responsive">
   <table class="table table-striped table-hover table-bordered padding-margin-0">
     <thead>
