--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -5,15 +5,19 @@
   <td class="text-nowrap text-overflow"><%= report.issue %></td>
   <td class="text-nowrap text-overflow"><%= report.description %></td>
   <td class="text-center">
-    <button type="button" class="btn btn-primary btn-sm">
-      <i class="bi-eye-fill"></i>
-    </button>
+    <%= link_to report, data: {turbo_frame: "modal"} do %>
+      <button type="button" class="btn btn-primary btn-sm">
+        <i class="bi-eye-fill"></i>
+      </button>
+    <% end %>
+
     <button type="button" class="btn btn-success btn-sm">
       <i class="bi-pencil-square"></i>
     </button>
+
     <%= link_to report, data: { "turbo-method": :delete, turbo_confirm: t("reports.you_sure?") }  do %>
       <button type="button" class="btn btn-danger btn-sm">
-        <i class="bi-trash-fill text-light"></i>
+        <i class="bi-trash-fill"></i>
       </button>
     <% end %>
   </td>
