--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36307,7 +36307,7 @@ main {
   .navbar-vertical.navbar-expand-lg>[class*=container] {
       align-items: stretch;
       flex-direction: column;
-      min-height: 100%;
+      /* min-height: 100%; */
       padding-left: 0;
       padding-right: 0
   }
