--- a/app/views/resources/_search.html.erb
+++ b/app/views/resources/_search.html.erb
@@ -2,14 +2,23 @@
   <%= f.label t("resources.index.search") , class: "form-label h6"%>
 
   <div class="row mb-3">
-    <div class="col">
+    <div class="col-lg-2">
       <%= f.date_field :date, value: params[:date], placeholder: "MM/DD/YYYY", class: "form-control bg-light-green border-light-green"%>
     </div>
-    <div class="col input-group input-group-merge">
+
+    <div class="col-lg-3">
       <%= f.text_field :name, value: params[:name], placeholder: t("resources.index.search_by_name"), class: "form-control bg-light-green border-light-green"%>
-      <span class="input-group-text bg-light-green border-light-green p-0">
-        <%= f.submit t("resources.index.search"), class: "btn btn-primary rounded-2 w-80px h-30px p-0 mx-1" %>
-      </span>
     </div>
-  </div> <!-- / .row -->
+
+    <div class="col-auto">
+      <%= f.submit t("resources.index.search"), name: nil, class: "btn btn-primary me-2 " %>
+      <%= link_to resources_path, class: "btn btn-secondary" do %>
+        <i class="bi bi-arrow-counterclockwise"></i>
+      <% end %>
+    </div>
+
+    <div class="col-auto ms-auto">
+      <%= link_to t("resources.index.new_resource"), new_resource_path, class: "btn btn-primary" %>
+    </div>
+  </div>
 <% end %>
