--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,8 +39,6 @@
 .flatpickr-calendar {
   -webkit-animation: none;
   animation: none;
-  background: transparent;
-  background: #fff;
   border: 0;
   border-radius: 5px;
   -webkit-box-shadow: 1px 0 0 #e6e6e6,-1px 0 0 #e6e6e6,0 1px 0 #e6e6e6,0 -1px 0 #e6e6e6,0 3px 13px rgba(0,0,0,.08);
@@ -58,7 +56,7 @@
   -ms-touch-action: manipulation;
   touch-action: manipulation;
   visibility: hidden;
-  width: 307.875px
+  width: 308px
 }
 
 .flatpickr-calendar.inline,.flatpickr-calendar.open {
@@ -254,7 +252,7 @@
 }
 
 .flatpickr-months .flatpickr-next-month svg path,.flatpickr-months .flatpickr-prev-month svg path {
-  fill: inherit;
+  fill: currentColor;
   -webkit-transition: fill .1s;
   transition: fill .1s
 }
@@ -357,8 +355,7 @@
   height: 34px;
   left: 12.5%;
   line-height: inherit;
-  line-height: 1;
-  padding: 7.48px 0 0;
+  padding: 7px 0 0;
   position: absolute;
   text-align: center;
   -webkit-transform: translateZ(0);
@@ -427,7 +424,7 @@
 }
 
 .flatpickr-current-month .flatpickr-monthDropdown-months {
-  appearance: menulist;
+  appearance: menulist-button;
   -webkit-appearance: menulist;
   -moz-appearance: menulist;
   background: transparent;
@@ -517,7 +514,7 @@ span.flatpickr-weekday {
   display: flex;
   overflow: hidden;
   position: relative;
-  width: 307.875px
+  width: 308px
 }
 
 .flatpickr-days:focus {
@@ -538,15 +535,15 @@ span.flatpickr-weekday {
   -ms-flex-wrap: wrap;
   -webkit-justify-content: space-around;
   justify-content: space-around;
-  max-width: 307.875px;
-  min-width: 307.875px;
+  max-width: 308px;
+  min-width: 308px;
   opacity: 1;
   outline: 0;
   padding: 0;
   text-align: left;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
-  width: 307.875px
+  width: 308px
 }
 
 .dayContainer+.dayContainer {
@@ -892,7 +889,6 @@ span.flatpickr-weekday {
 
 .fc-theme-standard td,.fc-theme-standard th {
   border: 1px solid #ddd;
-  border: 1px solid var(--fc-border-color,#ddd)
 }
 
 .fc-liquid-hack td,.fc-liquid-hack th {
@@ -911,7 +907,7 @@ span.flatpickr-weekday {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   display: inline-block;
-  font-family: fcicons!important;
+  font-family: fcicons, serif !important;
   font-style: normal;
   font-variant: normal;
   font-weight: 400;
@@ -966,7 +962,6 @@ span.flatpickr-weekday {
 
 .fc .fc-button:focus {
   outline: 1px dotted;
-  outline: 5px auto -webkit-focus-ring-color
 }
 
 .fc .fc-button {
@@ -1014,29 +1009,20 @@ span.flatpickr-weekday {
 
 .fc .fc-button-primary {
   background-color: #2c3e50;
-  background-color: var(--fc-button-bg-color,#2c3e50);
   border-color: #2c3e50;
-  border-color: var(--fc-button-border-color,#2c3e50);
   color: #fff;
-  color: var(--fc-button-text-color,#fff)
 }
 
 .fc .fc-button-primary:hover {
   background-color: #1e2b37;
-  background-color: var(--fc-button-hover-bg-color,#1e2b37);
   border-color: #1a252f;
-  border-color: var(--fc-button-hover-border-color,#1a252f);
   color: #fff;
-  color: var(--fc-button-text-color,#fff)
 }
 
 .fc .fc-button-primary:disabled {
   background-color: #2c3e50;
-  background-color: var(--fc-button-bg-color,#2c3e50);
   border-color: #2c3e50;
-  border-color: var(--fc-button-border-color,#2c3e50);
   color: #fff;
-  color: var(--fc-button-text-color,#fff)
 }
 
 .fc .fc-button-primary:focus {
@@ -1045,11 +1031,8 @@ span.flatpickr-weekday {
 
 .fc .fc-button-primary:not(:disabled).fc-button-active,.fc .fc-button-primary:not(:disabled):active {
   background-color: #1a252f;
-  background-color: var(--fc-button-active-bg-color,#1a252f);
   border-color: #151e27;
-  border-color: var(--fc-button-active-border-color,#151e27);
   color: #fff;
-  color: var(--fc-button-text-color,#fff)
 }
 
 .fc .fc-button-primary:not(:disabled).fc-button-active:focus,.fc .fc-button-primary:not(:disabled):active:focus {
@@ -1162,7 +1145,6 @@ span.flatpickr-weekday {
 
 .fc-theme-standard .fc-scrollgrid {
   border: 1px solid #ddd;
-  border: 1px solid var(--fc-border-color,#ddd)
 }
 
 .fc .fc-scrollgrid,.fc .fc-scrollgrid table {
@@ -1209,7 +1191,6 @@ span.flatpickr-weekday {
 
 .fc .fc-scrollgrid-section-sticky>* {
   background: #fff;
-  background: var(--fc-page-bg-color,#fff);
   position: sticky;
   z-index: 3
 }
@@ -1259,31 +1240,25 @@ span.flatpickr-weekday {
 
 .fc .fc-non-business {
   background: hsla(0,0%,84%,.3);
-  background: var(--fc-non-business-color,hsla(0,0%,84%,.3))
 }
 
 .fc .fc-bg-event {
   background: #8fdf82;
-  background: var(--fc-bg-event-color,#8fdf82);
   opacity: .3;
-  opacity: var(--fc-bg-event-opacity,.3)
 }
 
 .fc .fc-bg-event .fc-event-title {
   font-size: .85em;
-  font-size: var(--fc-small-font-size,.85em);
   font-style: italic;
   margin: .5em
 }
 
 .fc .fc-highlight {
   background: rgba(188,232,241,.3);
-  background: var(--fc-highlight-color,rgba(188,232,241,.3))
 }
 
 .fc .fc-cell-shaded,.fc .fc-day-disabled {
   background: hsla(0,0%,82%,.3);
-  background: var(--fc-neutral-bg-color,hsla(0,0%,82%,.3))
 }
 
 a.fc-event,a.fc-event:hover {
@@ -1319,17 +1294,12 @@ a.fc-event,a.fc-event:hover {
 
 .fc-event-selected .fc-event-resizer {
   background: #fff;
-  background: var(--fc-page-bg-color,#fff);
   border-color: inherit;
   border-radius: 4px;
-  border-radius: calc(var(--fc-event-resizer-dot-total-width, 8px)/2);
   border-style: solid;
   border-width: 1px;
-  border-width: var(--fc-event-resizer-dot-border-width,1px);
   height: 8px;
-  height: var(--fc-event-resizer-dot-total-width,8px);
   width: 8px;
-  width: var(--fc-event-resizer-dot-total-width,8px)
 }
 
 .fc-event-selected .fc-event-resizer:before {
@@ -1357,7 +1327,6 @@ a.fc-event,a.fc-event:hover {
 
 .fc-event-selected:after,.fc-event:focus:after {
   background: rgba(0,0,0,.25);
-  background: var(--fc-event-selected-overlay-color,rgba(0,0,0,.25));
   bottom: -1px;
   content: "";
   left: -1px;
@@ -1369,15 +1338,12 @@ a.fc-event,a.fc-event:hover {
 
 .fc-h-event {
   background-color: #3788d8;
-  background-color: var(--fc-event-bg-color,#3788d8);
   border: 1px solid #3788d8;
-  border: 1px solid var(--fc-event-border-color,#3788d8);
   display: block
 }
 
 .fc-h-event .fc-event-main {
   color: #fff;
-  color: var(--fc-event-text-color,#fff)
 }
 
 .fc-h-event .fc-event-main-frame {
@@ -1425,35 +1391,29 @@ a.fc-event,a.fc-event:hover {
   bottom: 0;
   top: 0;
   width: 8px;
-  width: var(--fc-event-resizer-thickness,8px)
 }
 
 .fc-direction-ltr .fc-h-event:not(.fc-event-selected) .fc-event-resizer-start,.fc-direction-rtl .fc-h-event:not(.fc-event-selected) .fc-event-resizer-end {
   cursor: w-resize;
   left: -4px;
-  left: calc(var(--fc-event-resizer-thickness, 8px)*-.5)
 }
 
 .fc-direction-ltr .fc-h-event:not(.fc-event-selected) .fc-event-resizer-end,.fc-direction-rtl .fc-h-event:not(.fc-event-selected) .fc-event-resizer-start {
   cursor: e-resize;
   right: -4px;
-  right: calc(var(--fc-event-resizer-thickness, 8px)*-.5)
 }
 
 .fc-h-event.fc-event-selected .fc-event-resizer {
   margin-top: -4px;
-  margin-top: calc(var(--fc-event-resizer-dot-total-width, 8px)*-.5);
   top: 50%
 }
 
 .fc-direction-ltr .fc-h-event.fc-event-selected .fc-event-resizer-start,.fc-direction-rtl .fc-h-event.fc-event-selected .fc-event-resizer-end {
   left: -4px;
-  left: calc(var(--fc-event-resizer-dot-total-width, 8px)*-.5)
 }
 
 .fc-direction-ltr .fc-h-event.fc-event-selected .fc-event-resizer-end,.fc-direction-rtl .fc-h-event.fc-event-selected .fc-event-resizer-start {
   right: -4px;
-  right: calc(var(--fc-event-resizer-dot-total-width, 8px)*-.5)
 }
 
 .fc .fc-popover {
@@ -1482,14 +1442,11 @@ a.fc-event,a.fc-event:hover {
 
 .fc-theme-standard .fc-popover {
   background: #fff;
-  background: var(--fc-page-bg-color,#fff);
   border: 1px solid #ddd;
-  border: 1px solid var(--fc-border-color,#ddd)
 }
 
 .fc-theme-standard .fc-popover-header {
   background: hsla(0,0%,82%,.3);
-  background: var(--fc-neutral-bg-color,hsla(0,0%,82%,.3))
 }
 
 :root {
@@ -1499,13 +1456,11 @@ a.fc-event,a.fc-event:hover {
 
 .fc-theme-standard .fc-list {
   border: 1px solid #ddd;
-  border: 1px solid var(--fc-border-color,#ddd)
 }
 
 .fc .fc-list-empty {
   align-items: center;
   background-color: hsla(0,0%,82%,.3);
-  background-color: var(--fc-neutral-bg-color,hsla(0,0%,82%,.3));
   display: flex;
   height: 100%;
   justify-content: center
@@ -1527,7 +1482,6 @@ a.fc-event,a.fc-event:hover {
 
 .fc .fc-list-sticky .fc-list-day>* {
   background: #fff;
-  background: var(--fc-page-bg-color,#fff);
   position: sticky;
   top: 0
 }
@@ -1581,7 +1535,6 @@ a.fc-event,a.fc-event:hover {
 
 .fc .fc-list-event:hover td {
   background-color: #f5f5f5;
-  background-color: var(--fc-list-event-hover-bg-color,#f5f5f5)
 }
 
 .fc .fc-list-event-graphic,.fc .fc-list-event-time {
@@ -1591,7 +1544,6 @@ a.fc-event,a.fc-event:hover {
 
 .fc .fc-list-event-dot {
   border: 5px solid #3788d8;
-  border: calc(var(--fc-list-event-dot-width, 10px)/2) solid var(--fc-event-border-color,#3788d8);
   border-radius: 5px;
   border-radius: calc(var(--fc-list-event-dot-width, 10px)/2);
   box-sizing: content-box;
@@ -1626,7 +1578,6 @@ a.fc-event,a.fc-event:hover {
 
 .fc .fc-daygrid-day.fc-day-today {
   background-color: rgba(255,220,40,.15);
-  background-color: var(--fc-today-bg-color,rgba(255,220,40,.15))
 }
 
 .fc .fc-daygrid-day-frame {
@@ -1725,9 +1676,7 @@ a.fc-event,a.fc-event:hover {
 
 .fc .fc-daygrid-week-number {
   background-color: hsla(0,0%,82%,.3);
-  background-color: var(--fc-neutral-bg-color,hsla(0,0%,82%,.3));
   color: grey;
-  color: var(--fc-neutral-text-color,grey);
   min-width: 1.5em;
   padding: 2px;
   position: absolute;
@@ -1766,7 +1715,6 @@ a.fc-event,a.fc-event:hover {
 .fc-daygrid-event {
   border-radius: 3px;
   font-size: .85em;
-  font-size: var(--fc-small-font-size,.85em);
   position: relative;
   white-space: nowrap
 }
@@ -1804,7 +1752,6 @@ a.fc-event,a.fc-event:hover {
 
 .fc-daygrid-event-dot {
   border: 4px solid #3788d8;
-  border: calc(var(--fc-daygrid-event-dot-width, 8px)/2) solid var(--fc-event-border-color,#3788d8);
   border-radius: 4px;
   border-radius: calc(var(--fc-daygrid-event-dot-width, 8px)/2);
   box-sizing: content-box;
@@ -1823,15 +1770,12 @@ a.fc-event,a.fc-event:hover {
 
 .fc-v-event {
   background-color: #3788d8;
-  background-color: var(--fc-event-bg-color,#3788d8);
   border: 1px solid #3788d8;
-  border: 1px solid var(--fc-event-border-color,#3788d8);
   display: block
 }
 
 .fc-v-event .fc-event-main {
   color: #fff;
-  color: var(--fc-event-text-color,#fff);
   height: 100%
 }
 
@@ -1888,35 +1832,29 @@ a.fc-event,a.fc-event:hover {
 
 .fc-v-event:not(.fc-event-selected) .fc-event-resizer {
   height: 8px;
-  height: var(--fc-event-resizer-thickness,8px);
   left: 0;
   right: 0
 }
 
 .fc-v-event:not(.fc-event-selected) .fc-event-resizer-start {
   top: -4px;
-  top: calc(var(--fc-event-resizer-thickness, 8px)/-2)
 }
 
 .fc-v-event:not(.fc-event-selected) .fc-event-resizer-end {
   bottom: -4px;
-  bottom: calc(var(--fc-event-resizer-thickness, 8px)/-2)
 }
 
 .fc-v-event.fc-event-selected .fc-event-resizer {
   left: 50%;
   margin-left: -4px;
-  margin-left: calc(var(--fc-event-resizer-dot-total-width, 8px)/-2)
 }
 
 .fc-v-event.fc-event-selected .fc-event-resizer-start {
   top: -4px;
-  top: calc(var(--fc-event-resizer-dot-total-width, 8px)/-2)
 }
 
 .fc-v-event.fc-event-selected .fc-event-resizer-end {
   bottom: -4px;
-  bottom: calc(var(--fc-event-resizer-dot-total-width, 8px)/-2)
 }
 
 .fc .fc-timegrid .fc-daygrid-body {
@@ -2003,7 +1941,6 @@ a.fc-event,a.fc-event:hover {
 
 .fc .fc-timegrid-col.fc-day-today {
   background-color: rgba(255,220,40,.15);
-  background-color: var(--fc-today-bg-color,rgba(255,220,40,.15))
 }
 
 .fc .fc-timegrid-col-frame {
@@ -2092,13 +2029,11 @@ a.fc-event,a.fc-event:hover {
 
 .fc-timegrid-event-harness-inset .fc-timegrid-event,.fc-timegrid-event.fc-event-mirror,.fc-timegrid-more-link {
   box-shadow: 0 0 0 1px #fff;
-  box-shadow: 0 0 0 1px var(--fc-page-bg-color,#fff)
 }
 
 .fc-timegrid-event,.fc-timegrid-more-link {
   border-radius: 3px;
   font-size: .85em;
-  font-size: var(--fc-small-font-size,.85em)
 }
 
 .fc-timegrid-event {
@@ -2111,7 +2046,6 @@ a.fc-event,a.fc-event:hover {
 
 .fc-timegrid-event .fc-event-time {
   font-size: .85em;
-  font-size: var(--fc-small-font-size,.85em);
   margin-bottom: 1px;
   white-space: nowrap
 }
@@ -2127,14 +2061,11 @@ a.fc-event,a.fc-event:hover {
 
 .fc-timegrid-event-short .fc-event-title {
   font-size: .85em;
-  font-size: var(--fc-small-font-size,.85em)
 }
 
 .fc-timegrid-more-link {
   background: #d0d0d0;
-  background: var(--fc-more-link-bg-color,#d0d0d0);
   color: inherit;
-  color: var(--fc-more-link-text-color,inherit);
   cursor: pointer;
   margin-bottom: 1px;
   position: absolute;
@@ -2156,7 +2087,6 @@ a.fc-event,a.fc-event:hover {
 
 .fc .fc-timegrid-now-indicator-line {
   border-color: red;
-  border-color: var(--fc-now-indicator-color,red);
   border-style: solid;
   border-width: 1px 0 0;
   left: 0;
@@ -2167,7 +2097,6 @@ a.fc-event,a.fc-event:hover {
 
 .fc .fc-timegrid-now-indicator-arrow {
   border-color: red;
-  border-color: var(--fc-now-indicator-color,red);
   border-style: solid;
   margin-top: -5px;
   position: absolute;
@@ -2218,6 +2147,7 @@ a.fc-event,a.fc-event:hover {
 * Copyright (c) 2014, Jason Chen
 * Copyright (c) 2013, salesforce.com
 */
+
 .ql-container {
   box-sizing: border-box;
   font-family: Helvetica,Arial,sans-serif;
@@ -38826,4 +38756,29 @@ code.hljs {
   cursor: pointer;
   display: inline-block;
   min-width: 24px;
+}
+/*
+  flash
+ */
+.flash {
+  position:fixed!important;
+  top: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 10;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  animation: appear-then-fade 4s both;
+}
+
+@keyframes appear-then-fade {
+  0%, 100% {
+    opacity:0
+  }
+  5%, 60% {
+    opacity:1
+  }
 }
