--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -56,7 +56,7 @@
             <span class="avatar avatar-circle avatar-xxs">
               <%= image_tag "https://d33wubrfki0l68.cloudfront.net/8ab0a140561aa1ea23abaa0101bd41b9b1d0cb12/e951b/assets/images/flags/1x1/us.svg", class: "avatar-img", alt: "...", width: 18, height: 18 %>
             </span>
-            <%= link_to "English", root_path(locale: "en"), class: "text-truncate ms-2" %>
+            <%= link_to "English", {locale: "en"}, {class: "text-truncate ms-2"} %>
           </span>
         </li>
         <li>
@@ -64,7 +64,7 @@
             <span class="avatar avatar-circle avatar-xxs">
               <%= image_tag "https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Flag_of_Vietnam.svg/255px-Flag_of_Vietnam.svg.png", class: "avatar-img", alt: "...", width: 18, height: 18 %>
             </span>
-            <%= link_to "Tiếng Việt", root_path(locale: "vi"), class: "text-truncate ms-2" %>
+            <%= link_to "Tiếng Việt", {locale: "vi"}, {class: "text-truncate ms-2"} %>
           </span>
         </li>
         <li>
@@ -72,7 +72,7 @@
             <span class="avatar avatar-circle avatar-xxs">
               <%= image_tag "https://upload.wikimedia.org/wikipedia/en/thumb/9/9e/Flag_of_Japan.svg/1200px-Flag_of_Japan.svg.png", class: "avatar-img", alt: "...", width: 18, height: 18 %>
             </span>
-            <%= link_to "日本語", root_path(locale: "jp"), class: "text-truncate ms-2" %>
+            <%= link_to "日本語", {locale: "jp"}, {class: "text-truncate ms-2"} %>
           </span>
         </li>
       </ul>
