--- a/app/views/resources/_table.html.erb
+++ b/app/views/resources/_table.html.erb
@@ -17,6 +17,9 @@
         <th class="text-dark">
           <%= t(".date")%>
         </th>
+        <th class="text-dark">
+          <%= t(".action")%>
+        </th>
       </tr>
     </thead>
 
