--- a/app/views/resources/_project.html.erb
+++ b/app/views/resources/_project.html.erb
@@ -4,4 +4,15 @@
   <td><%= number_with_precision(project.sum_man_month, precision: 2) %></td>
   <td><%= link_to t(".detail"), resource_path(project) %></td>
   <td><%= format_date project.start_date %></td>
+  <td class="text-center">
+    <button type="button" class="btn btn-primary btn-sm">
+      <i class="bi-eye-fill"></i>
+    </button>
+    <button type="button" class="btn btn-success btn-sm">
+      <i class="bi-pencil-square"></i>
+    </button>
+    <button type="button" class="btn btn-danger btn-sm">
+      <i class="bi-trash-fill"></i>
+    </button>
+  </td>
 </tr>
